[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://addons/scrolling_background/scrolling_background.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/fonts/pixelfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/objects/scenes/GameOverScene.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/PlayButton.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/PlayButtonPresssed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 63
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GameOverScene" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ScrollingBackground" type="Node" parent="CanvasLayer"]
script = ExtResource( 2 )
texture = ExtResource( 1 )
speed_x = 0
speed_y = 1
scale = 4.0
modulate = null

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrScore" type="Label" parent="Control"]
margin_left = 14.44
margin_top = 383.214
margin_right = 106.44
margin_bottom = 399.214
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Your Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Control"]
margin_left = 12.635
margin_top = 315.874
margin_right = 104.635
margin_bottom = 331.874
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.470588, 0.701961, 0.572549, 1 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMainMenu" type="Button" parent="Control"]
margin_left = 171.585
margin_top = 706.355
margin_right = 304.585
margin_bottom = 771.355
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnPlay" type="TextureButton" parent="Control"]
margin_left = 184.11
margin_top = 554.134
margin_right = 284.11
margin_bottom = 654.134
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
margin_left = 43.3199
margin_top = 140.79
margin_right = 423.32
margin_bottom = 204.79
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.960784, 0.309804, 0.309804, 1 )
text = "GAME OVER"
[connection signal="pressed" from="Control/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
[connection signal="pressed" from="Control/BtnPlay" to="." method="_on_BtnPlay_pressed"]
